# deliberate

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  M1_VALIDATION_REPORT.md  M2A_VALIDATION_REPORT.md  PRD.md  README.md  docker-compose.yml  llms.txt
.github/workflows/: ci.yml
config/: approvers.yaml  webhooks.yaml
docs/: M1_MANUAL_TEST_GUIDE.md  M1_MANUAL_TEST_LOG.md  M3_MILESTONE.md  admin-api.md  custom-layouts.md  mcp.md  migration-guide.md  quickstart.md  rbac.md  security.md
docs/superpowers/plans/: 2026-04-23-agent-friendly.md
docs/superpowers/specs/: 2026-04-23-agent-friendly-design.md
examples/policies/: default.yaml  refund.yaml
examples/refund_agent/: README.md  agent.py  dogfood.py  pyproject.toml  test.sh
mcp/: pyproject.toml
mcp/src/deliberate_mcp/: __init__.py  __main__.py  client.py  server.py
mcp/tests/: test_tools.py
scripts/: verify_schema.py
sdk/: pyproject.toml
sdk/.omc/state/: last-tool-error.json
sdk/src/deliberate/: __init__.py  client.py  decorator.py  types.py
sdk/tests/: test_client.py  test_decorator.py  test_types.py
server/: Dockerfile  alembic.ini  pyproject.toml
server/.omc/state/: last-tool-error.json
server/alembic/: env.py
server/alembic/versions/: 0001_initial.py  0002_fix_ooo_active.py  0003_notification_attempts.py  0004_approval_groups.py  0005_resume_events_and_prev_hash.py  0006_agent_friendly.py
server/src/deliberate_server/: __init__.py  auth.py  config.py  main.py  metrics.py  seeding.py  telemetry.py  worker.py
server/src/deliberate_server/api/: deps.py
server/src/deliberate_server/api/routes/: api_keys.py  approval_groups.py  approvals.py  approvers_admin.py  auth.py  interrupts.py  ledger.py  policies.py
server/src/deliberate_server/db/: models.py  session.py
server/src/deliberate_server/notify/: __init__.py  base.py  dispatcher.py  email.py  slack.py  webhook.py
server/src/deliberate_server/policy/: __init__.py  directory.py  engine.py  evaluator.py  parser.py  types.py
server/tests/: conftest.py  test_agent_friendly_integration.py  test_api_keys.py  test_approvals.py  test_approvers_api.py  test_auth.py  test_health.py  test_interrupts.py  test_migration.py  test_models.py  test_policies_api.py  test_rbac.py  test_seeding.py  test_worker.py
server/tests/integration/: test_approval_groups.py  test_validation.py
server/tests/notify/: test_adversarial.py  test_dispatcher.py  test_slack.py  test_webhook.py
server/tests/policy/: test_adversarial.py  test_directory.py  test_engine.py  test_expression.py
tests/: test_integration.py
ui/: Dockerfile  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.tsbuildinfo
ui/app/: layout.tsx  page.tsx
ui/app/a/[approval_id]/: page.tsx
ui/app/a/[token]/: page.tsx
ui/components/: decision-form.tsx  decision-overlay.tsx  markdown-text.tsx
ui/components/layouts/code_deployment/: index.tsx
ui/components/layouts/content_moderation/: index.tsx
ui/components/layouts/data_access/: index.tsx
ui/components/layouts/document_review/: index.tsx
ui/components/layouts/financial_decision/: index.tsx
ui/components/layouts/procedure_signoff/: index.tsx
ui/components/layouts/shared/: agent-reasoning.tsx
ui/tests/: approval-page.spec.ts  global-setup.ts
