[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deliberate-mcp"
version = "0.1.0"
description = "MCP server for Deliberate — AI-agent-friendly HITL approval management"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0,<2",
    "httpx>=0.27,<1",
]

[project.scripts]
deliberate-mcp = "deliberate_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/deliberate_mcp"]
