[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deliberate"
version = "0.0.1"
description = "The approval layer for LangGraph agents"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Beomwoo Kang", email = "beomwookang@gmail.com" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0,<3",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
langgraph = [
    "langgraph>=0.3,<0.5",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/deliberate"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
