[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deliberate-server"
version = "0.0.1"
description = "Deliberate server — API gateway, policy engine, and timeout worker"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Beomwoo Kang", email = "beomwookang@gmail.com" },
]
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "apscheduler>=3.10,<4",
    "PyJWT>=2.8,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
]

[project.scripts]
deliberate-server = "deliberate_server.main:run"
deliberate-worker = "deliberate_server.worker:run"

[tool.hatch.build.targets.wheel]
packages = ["src/deliberate_server"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
